--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <body>
     </body>
     <script type="text/javascript">
-        window.location.href="http://web.zhanhi.com/vip_kenxu001.html";
+        window.location.href="https://www.cnblogs.com/max-hou/p/10016192.html";
     </script>
 </html>
