--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <body>
     </body>
     <script type="text/javascript">
-        window.location.href="https://i.youku.com/i/UMTQ2MjM5MjAw?spm=a2hzp.8244740.0.0";
+        window.location.href="http://i.youku.com/i/UMTQ2MjM5MjAw?spm=a2hzp.8244740.0.0";
     </script>
 </html>
